    work if namespace is in capitals (kanaka kumar avvaru via vinayakumarb)

    HDFS-8642. Make TestFileTruncate more reliable. (Rakesh R via
    Arpit Agarwal)

    HDFS-8729. Fix TestFileTruncate#testTruncateWithDataNodesRestartImmediately
    which occasionally failed. (Walter Su via jing9)

    HDFS-8749. Fix findbugs warnings in BlockManager.java.
    (Brahma Reddy Battula via aajisaka)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  HDFS-8659. Block scanner INFO message is spamming logs. (Yongjun Zhang)

  OPTIMIZATIONS

  BUG FIXES

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8081. Split getAdditionalBlock() into two methods. (shv)

    HDFS-7931. DistributedFileSystem should not look for keyProvider in
    cache if Encryption is disabled (asuresh)

    HDFS-8204. Mover/Balancer should not schedule two replicas to the same
    datanode.  (Walter Su via szetszwo)

    HDFS-7770. Need document for storage type label of data node storage
    locations under dfs.data.dir. (Xiaoyu Yao via aajisaka)

    HDFS-8213. DFSClient should use hdfs.client.htrace HTrace configuration
    prefix rather than hadoop.htrace (cmccabe)

    HDFS-8521. Add VisibleForTesting annotation to
    BlockPoolSlice#selectReplicaToDelete. (cmccabe)

    HDFS-8361. Choose SSD over DISK in block placement.  (szetszwo)

    HDFS-7546. Document, and set an accepting default for
    dfs.namenode.kerberos.principal.pattern (Harsh J via aw)

    HDFS-7164. Feature documentation for HDFS-6581. (Arpit Agarwal)

  OPTIMIZATIONS
    HDFS-8480. Fix performance and timeout issues in HDFS-7929 by using
    hard-links to preserve old edit logs, instead of copying them. (Zhe Zhang
    via Colin P. McCabe)

  BUG FIXES

    HDFS-8127. NameNode Failover during HA upgrade can cause DataNode to
    finalize upgrade. (jing9)

    HDFS-8151. Always use snapshot path as source when invalid snapshot names